--- a/.github/workflows/branch-ci.yml
+++ b/.github/workflows/branch-ci.yml
@@ -1,10 +1,8 @@
-name: CI
+name: Branch CI
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    types: [opened, synchronize, reopened]
+    branches-ignore: [ main ]
 
 permissions:
   contents: write
@@ -12,9 +10,30 @@ permissions:
   pull-requests: write
 
 jobs:
+  # Check if this push has an associated PR
+  check-pr:
+    name: Check for PR
+    runs-on: ubuntu-latest
+    outputs:
+      has-pr: ${{ steps.check.outputs.has-pr }}
+    steps:
+    - name: Check if PR exists
+      id: check
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        prs=$(gh api repos/${{ github.repository }}/pulls --jq '.[] | select(.head.sha == "${{ github.sha }}") | .number')
+        if [ -z "$prs" ]; then
+          echo "has-pr=false" >> $GITHUB_OUTPUT
+        else
+          echo "has-pr=true" >> $GITHUB_OUTPUT
+        fi
+
   lint-and-test:
     name: Lint and Test
     runs-on: ubuntu-latest
+    needs: check-pr
+    if: needs.check-pr.outputs.has-pr == 'false'
 
     steps:
     - uses: actions/checkout@v4
@@ -53,7 +72,8 @@ jobs:
   gitguardian-scan:
     name: GitGuardian Repository History Scan
     runs-on: ubuntu-latest
-    needs: lint-and-test
+    needs: [check-pr, lint-and-test]
+    if: needs.check-pr.outputs.has-pr == 'false'
 
     steps:
     - uses: actions/checkout@v4
@@ -71,8 +91,8 @@ jobs:
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
-    needs: [lint-and-test, gitguardian-scan]
-    if: github.ref == 'refs/heads/main'
+    needs: [check-pr, lint-and-test, gitguardian-scan]
+    if: needs.check-pr.outputs.has-pr == 'false' && github.ref == 'refs/heads/main'
 
     steps:
     - uses: actions/checkout@v4
@@ -144,8 +164,8 @@ jobs:
   semgrep:
     name: Semgrep Security Analysis
     runs-on: ubuntu-latest
-    needs: [lint-and-test, gitguardian-scan]
-    if: github.ref == 'refs/heads/main'
+    needs: [check-pr, lint-and-test, gitguardian-scan]
+    if: needs.check-pr.outputs.has-pr == 'false' && github.ref == 'refs/heads/main'
     permissions:
       contents: read
     env:
@@ -160,8 +180,8 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: [lint-and-test, gitguardian-scan, sonarcloud, semgrep]
-    if: always() && !cancelled() && !contains(needs.*.result, 'failure')
+    needs: [check-pr, lint-and-test, gitguardian-scan, sonarcloud, semgrep]
+    if: needs.check-pr.outputs.has-pr == 'false' && always() && !cancelled() && !contains(needs.*.result, 'failure')
 
     steps:
     - uses: actions/checkout@v4
@@ -180,8 +200,8 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: [lint-and-test, gitguardian-scan, sonarcloud, semgrep, build]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: [check-pr, lint-and-test, gitguardian-scan, sonarcloud, semgrep, build]
+    if: needs.check-pr.outputs.has-pr == 'false' && github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
     - uses: actions/checkout@v4
