--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,10 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ '**' ]
   pull_request:
     types: [opened, synchronize, reopened]
+  workflow_dispatch:  # Allow manual triggering
 
 permissions:
   contents: write
