--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,18 +26,20 @@ jobs:
       with:
         python-version: '3.x'
 
-    - name: Install pre-commit
-      run: pip install pre-commit
-
-    - name: Run lint and security checks
-      env:
-        GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
-      run: pre-commit run --all-files
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -e ".[dev]"
+        pip install black flake8 ggshield pyyaml
+
+    - name: Install lefthook
+      run: |
+        curl -sSfL https://raw.githubusercontent.com/evilmartians/lefthook/master/install.sh | sh -s -- -b /usr/local/bin
+
+    - name: Run lint and security checks
+      env:
+        GITGUARDIAN_API_KEY: ${{ secrets.GITGUARDIAN_API_KEY }}
+      run: lefthook run pre-commit --all-files
 
     - name: Run tests with coverage
       run: |
