--- a/.github/workflows/auto-fix-ci.yml
+++ b/.github/workflows/auto-fix-ci.yml
@@ -9,7 +9,7 @@ on:
 permissions:
   contents: write
   pull-requests: write
-  actions: read
+  actions: write
 
 jobs:
   notify-claude:
@@ -62,9 +62,10 @@ jobs:
 
           Please:
           1. Check the failed workflow logs using gh CLI or WebFetch
-          2. Identify the root cause (likely undefined_variable in src/acronymcreator/cli.py line 67)
+          2. Identify the root cause
           3. Fix the issue by editing the file
           4. Commit the fix
           5. Push to the current branch
+          6. ONLY AFTER YOU HAVE COMPLETELY FINISHED ALL FIXES AND PUSHED: Trigger CI to re-run using: gh workflow run ci.yml --ref ${{ steps.get-pr.outputs.pr_branch }}
 
-          Make sure to actually push your changes so CI can re-run!
+          IMPORTANT: Step 6 must be the ABSOLUTE LAST action you take, after all fixes are complete and pushed. Commits from GitHub Actions don't automatically trigger workflows, so you MUST manually trigger CI!
