fix(ci): add concurrency control and conventional commits to auto-fix
Add concurrency control to prevent multiple auto-fix runs:
- Group by branch to cancel duplicate runs
- Prevents auto-fix loops and resource waste

Fix auto-fix commit messages:
- Use conventional commit format: 'fix: description'
- Include Co-Authored-By attribution
- Ensures commits pass conventional-commit hook

--- a/.github/workflows/auto-fix-ci.yml
+++ b/.github/workflows/auto-fix-ci.yml
@@ -6,6 +6,10 @@ on:
     types:
       - completed
 
+concurrency:
+  group: auto-fix-${{ github.event.workflow_run.head_branch }}
+  cancel-in-progress: true
+
 permissions:
   contents: write
   pull-requests: write
@@ -80,8 +84,11 @@ jobs:
              - Ensure all hooks pass before proceeding
 
           4. COMMIT AND PUSH (only if validation passes)
-             - Commit the fix with a conventional commit message
-             - Push to ${{ steps.get-pr.outputs.pr_branch }}
+             - Generate conventional commit message using format:
+               "fix: <brief description of what was fixed>"
+             - Include Co-Authored-By: Claude <noreply@anthropic.com>
+             - Example: "fix: remove undefined variable causing NameError"
+             - Commit and push to ${{ steps.get-pr.outputs.pr_branch }}
 
           5. TRIGGER CI (ABSOLUTE LAST STEP)
              - Run: gh workflow run ci.yml --ref ${{ steps.get-pr.outputs.pr_branch }}
