fix(ci): set permissionMode to always-allow to enable file edits

--- a/.github/workflows/auto-fix-ci.yml
+++ b/.github/workflows/auto-fix-ci.yml
@@ -57,7 +57,10 @@ jobs:
       with:
         anthropic_api_key: ${{ secrets.ANTHROPIC_API_KEY }}
         github_token: ${{ secrets.AUTO_FIX_PAT }}
-        additional_permissions: "Bash,WebFetch,Edit,Write,Read,Glob,Grep"
+        settings: |
+          {
+            "permissionMode": "always-allow"
+          }
         prompt: |
           CI workflow failed for PR #${{ steps.get-pr.outputs.pr_number }}.
 
